# python-app

./: pyproject.toml
flask-web-app/apps/minimalapp/: app.py
flask-web-app/apps/minimalapp/templates/: contact.html  contact_complete.html  index.html
my_roboter/: appserver.sql  settings.py
my_roboter/app/controllers/: forms.py  roboter.py
my_roboter/app/models/: db.py  pyproject.toml  rate.py  restaurant.py  user.py
my_roboter/static/: style.css
my_roboter/templates/: base.html  evaluate_restaurant.html  good_bye.html  hello.html  recommend_restaurant.html
