[tool.poetry]
name = "python-app"
version = "0.1.0"
description = ""
authors = ["y-hiroki-radiotech <bnndd439@ybb.ne.jp>"]
readme = "README.md"
packages = [{include = "python_app"}]

[tool.poetry.dependencies]
python = "3.11.3"
flask = "^3.1.0"
numpy = "^2.2.2"
docker = "^7.1.0"
sqlalchemy = "1.3.18"
flask-wtf = "1.0.1"
pandas = "^2.2.3"
scikit-surprise = "^1.1.4"
pybind11 = "2.12"
surprise = "^0.1"
black = "^24.10.0"
isort = "^5.13.2"
click = "^8.1.8"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.5"
markupsafe = "^3.0.2"
setuptools = "^75.8.0"
werkzeug = "^3.1.3"
flake8 = "^7.1.1"
mypy = "^1.14.1"
python-dotenv = "^1.0.1"
email-validator = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
